Revision history for {{$dist->name}}

{{$NEXT}}
  - add function find_lib_or_exit (GH#2)
  - [API CHANGE] find_lib returns first library
    found if called in scalar context, instead 
    of the number of libraries found.

0.04      2015-01-02 11:21:59 -0500
  - works with .bundle files on OS X
    (previously only with .dylib files)

0.03      2014-10-26 16:35:22 -0400
  - use DynaLoader for symbol resolution instead of FFI::Raw
    thus remove dep on FFI::Raw
  - add verify option

0.02      2014-10-26 13:18:14 -0400
  - first release to CPAN

0.01      2014-10-26 11:34:58 -0400
  - initial version